--- a/vader.ipynb
+++ b/vader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "[5000 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,38 +217,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sklearn.metrics"
+    "import sklearn.metrics\n",
+    "import numpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "# applying analysis, checking accuracies\n",
     "\n",
-    "threshold_trials = []\n",
+    "threshold_trials = numpy.arange(-1, 1.1, 0.1)\n",
     "\n",
     "accuracy_scores = []\n",
     "\n",
-    "threshold = -1\n",
-    "\n",
-    "while threshold <= 1:\n",
-    "    threshold_trials.append(threshold)\n",
+    "for threshold in threshold_trials:\n",
     "    df['sentiment_score'] = df['text'].apply(lambda x: analysis(x, threshold))\n",
-    "    accuracy_scores.append(sklearn.metrics.accuracy_score(df['label'], df['sentiment_score']))\n",
-    "    \n",
-    "    threshold += 0.1"
+    "    accuracy_scores.append(sklearn.metrics.accuracy_score(df['label'], df['sentiment_score']))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -274,10 +270,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7999999999999996\n",
+      "0.7168\n"
+     ]
+    }
+   ],
+   "source": [
+    "# displays the threshold corressponding to the max accuracy\n",
+    "\n",
+    "max_accuracy_threshold = threshold_trials[accuracy_scores.index(max(accuracy_scores))]\n",
+    "print(max_accuracy_threshold)\n",
+    "print(max(accuracy_scores))\n",
+    "\n",
+    "# this threshold seems quite high. this will likely hold up better for longer, comprehensive texts with a consistent emotion judging by the nature of the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1710  785]\n",
+      " [ 631 1874]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# confusion matrix\n",
+    "\n",
+    "df['sentiment_score'] = df['text'].apply(lambda x: analysis(x, max_accuracy_threshold))\n",
+    "print(sklearn.metrics.confusion_matrix(df['label'], df['sentiment_score']))"
+   ]
   }
  ],
  "metadata": {
