readme update + redundant download

--- a/vader.ipynb
+++ b/vader.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import nltk\n",
-    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
-    "from nltk.corpus import stopwords"
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer"
    ]
   },
   {
@@ -275,25 +274,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.721225\n",
-      "0.7999999999999996\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# displays the threshold corresponding to the max accuracy\n",
     "\n",
-    "max_accuracy_threshold = threshold_trials[accuracy_scores.index(max(accuracy_scores))]\n",
-    "print(max_accuracy_threshold)\n",
+    "max_accuracy_threshold = threshold_trials[numpy.argmax(accuracy_scores)]\n",
     "\n",
-    "# this threshold seems quite high. this will likely hold up better for longer, comprehensive texts with a consistent emotion judging by the nature of the dataset"
+    "# the threshold seems quite high. this will likely hold up better for longer, comprehensive texts with a consistent emotion judging by the nature of the dataset"
    ]
   },
   {
